[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Main/Main.png" type="Texture" id=1]
[ext_resource path="res://Assets/Main/Soldier.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Main/SoldierArea.gd" type="Script" id=3]
[ext_resource path="res://Assets/Main/Soldier2.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Aware",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Passive",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 96, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Aware",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Passive",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 96, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 96, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 96, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 128, 96, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 96, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 384, 96, 128 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Aware",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Passive",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 160 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 160 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 160 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "Aware",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Passive",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 240, 160 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 160, 240, 160 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "Aware",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Passive",
"speed": 1.0
} ]

[node name="SoldierArea" type="Sprite"]
modulate = Color( 0.411765, 0.45098, 0.466667, 1 )
position = Vector2( 222, 111 )
scale = Vector2( 0.613861, 0.613861 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Soldier1" type="AnimatedSprite" parent="."]
position = Vector2( -330.694, 128.694 )
scale = Vector2( 1.31452, 1.31452 )
frames = SubResource( 5 )
animation = "Passive"
frame = 1
playing = true

[node name="Soldier2" type="AnimatedSprite" parent="."]
position = Vector2( -162.903, 118.919 )
scale = Vector2( 1.31452, 1.31452 )
frames = SubResource( 3 )
animation = "Passive"
playing = true

[node name="Soldier3" type="AnimatedSprite" parent="."]
position = Vector2( 53.7581, 122.178 )
scale = Vector2( 1.31452, 1.31452 )
frames = SubResource( 18 )
animation = "Passive"
playing = true

[node name="Soldier4" type="AnimatedSprite" parent="."]
position = Vector2( 185.71, 135.21 )
scale = Vector2( 1.4582, 1.4582 )
frames = SubResource( 22 )
animation = "Passive"
frame = 1
playing = true

[node name="SoldierAlert" type="AnimatedSprite" parent="."]
position = Vector2( -29.3227, 218.29 )
scale = Vector2( 1.4582, 1.4582 )
frames = SubResource( 25 )
animation = "Passive"
playing = true
